k8s/logger/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-deployment
  labels:
    app: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger-container
        image: tonelomb/logger-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
