k8s/logger/service.yml
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  labels:
    app: logger
spec:
  selector:
    app: logger
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8086 # Port du conteneur
    name: http
  type: NodePort # Peut être NodePort ou LoadBalancer selon les besoin
