k8s/logger/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logger-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - logger-gateway
  http:
    - match:
        - uri:
            prefix: /log
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: logger-service
